--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,9 @@ footer h2{
   
   p{
     font-size: 14px; 
-    color: #0e0e0e; 
+    color: #743535; 
   }
-  
+
   /* codigo clase */
+
+  /* version dos */
